--- a/biblio/package.json
+++ b/biblio/package.json
@@ -17,5 +17,9 @@
         "tailwindcss": "^3.2.1",
         "vite": "^6.0.11",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "es6-promise": "^4.2.8",
+        "ziggy-js": "^2.5.2"
     }
 }
