--- a/biblio/package.json
+++ b/biblio/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "es6-promise": "^4.2.8",
+        "vue-multiselect": "^3.2.0",
         "ziggy-js": "^2.5.2"
     }
 }
